--- a/driveminer.kv
+++ b/driveminer.kv
@@ -38,6 +38,28 @@
 			texture: self.texture
 			size: self.texture_size
 			pos: int(self.center_x - self.texture_size[0] / 2.0), int(self.center_y - self.texture_size[1] / 2.)
+			
+<-StopGoToggleButton@ToggleButton>:
+	background_normal: './images/corners.png'
+	background_down: './images/corners_down.png'
+	border: 7, 7, 7, 7
+	state_image: self.background_normal if self.state == 'normal' else self.background_normal
+	disabled_image: self.background_normal if self.state == 'normal' else self.background_normal
+	font_name: './fonts/Montserrat-Bold.ttf'
+	canvas:
+		Color:
+			rgba: self.background_color
+		BorderImage:
+			border: self.border
+			pos: self.pos
+			size: self.size
+			source: self.disabled_image if self.disabled else self.state_image
+		Color:
+			rgba: 1, 1, 1, 1
+		Rectangle:
+			texture: self.texture
+			size: self.texture_size
+			pos: int(self.center_x - self.texture_size[0] / 2.0), int(self.center_y - self.texture_size[1] / 2.)
 
 <DriveMiner>:
 	id: driveminer
@@ -73,25 +95,26 @@
 		Label:
 			id: application_title_label
 			pos_hint: {'top': 0.95}
-			text: "DriveMiner"
+			text: root.top_row_text
 			size_hint: 0.85, 1.0
-			padding_x: self.width / 4
+			text_size: self.size
+			valign: 'middle'
 			font_name: './fonts/Montserrat-Bold.ttf'
 			color: 0.26, 0.29, 0.33, 1
-			font_size: '19sp'
+			font_size: '16sp'
 		Button:
-			id: application_cancel
-			text: "x"
+			id: application_open_storjcoin
+			text: "?"
 			padding_y: -2
 			pos_hint: {'top': 0.65}
 			font_name: './fonts/DroidSansMono.ttf'
 			size_hint: 0.15, 0.4
-			color: 0.9, 0, 0, 1
-			background_color: (0.98, .43, 0.31, 1)
+			color: root.DARK_YELLOW
+			background_color: root.YELLOW
 			background_normal: './images/cancel_btn.png'
 			background_down: './images/cancel_btn_down.png'
 			border: 9, 9, 14, 14
-			on_release: root.app_cancel_callback(application_cancel)
+			on_release: root.app_goto_site_callback(application_open_storjcoin)
 
 	### Storage bar
 	BoxLayout:
@@ -264,14 +287,15 @@
 			size_hint: 0.5, None
 			background_color: (0.23, 0.68, 0.85,	 1)
 			on_release: root.settings_callback(settings_btn)
-		ActionButton:
+		StopGoToggleButton:
 			id: go_btn
 			pos_hint: {'center_y': 0.5}
-			text: "GO"
+			state: 'normal'
+			text: driveminer.go_text
 			size: 100, 40
 			font_size: '16sp'
 			size_hint: 0.5, None
-			background_color: (0.62, 0.83, 0.40, 1)
-			on_release: root.go_callback(go_btn)
+			background_color: root.GREEN
+			on_press: driveminer.go_toggle(go_btn)
 			
 		
