--- a/driveshare.kv
+++ b/driveshare.kv
@@ -87,8 +87,8 @@
 				text: "Select"
 				on_release: root.select(filechooser.path, text_input.text)
 
-<Main>:
-	id: driveshare
+<MainMenu>:
+	id: main_menu
 	orientation: 'vertical'
 	pos_hint: {'top': 1.0}
 	spacing: 1
@@ -113,12 +113,12 @@
 			Color:
 				rgba: 0.30, 0.75, 0.91, 1
 			Rectangle:
-				pos: 0, driveshare.height - 5
+				pos: 0, main_menu.height - 5
 				size: self.width+2, 5
 		Label:
 			id: application_title_label
 			pos_hint: {'top': 1}
-			text: driveshare.top_row_text
+			text: main_menu.top_row_text
 			size_hint: 0.85, 1.0
 			text_size: self.size
 			valign: 'middle'
@@ -131,12 +131,12 @@
 			pos_hint: {'top': 0.71}
 			font_name: './fonts/DroidSansMono.ttf'
 			size_hint: 0.15, 0.4
-			color: driveshare.DARK_YELLOW
-			background_color: driveshare.YELLOW
+			color: main_menu.DARK_YELLOW
+			background_color: main_menu.YELLOW
 			background_normal: './images/cancel_btn.png'
 			background_down: './images/cancel_btn_down.png'
 			border: 9, 9, 14, 14
-			on_release: driveshare.app_goto_site_callback(application_open_storjcoin)
+			on_release: main_menu.app_goto_site_callback(application_open_storjcoin)
 
 	### Storage bar
 	BoxLayout:
@@ -161,7 +161,7 @@
 				color: 0.26, 0.29, 0.33, 1
 			Label:
 				id: storage_space_label
-				text: driveshare.storage_percent
+				text: main_menu.storage_percent
 				size_hint: 0.5, 1.0
 				text_size: self.size
 				halign: 'right'
@@ -181,7 +181,7 @@
 			size_hint: 1.0, 0.33
 			Label:
 				id: storage_space_lower_label
-				text: driveshare.lower_storage_limit
+				text: main_menu.lower_storage_limit
 				text_size: self.size
 				valign: 'top'
 				size_hint: 0.5, 1.0
@@ -189,7 +189,7 @@
 				color: 0.66, 0.69, 0.74, 1
 			Label:
 				id: storage_space_upper_label
-				text: driveshare.upper_storage_limit
+				text: main_menu.upper_storage_limit
 				text_size: self.size
 				halign: 'right'
 				valign: 'top'
@@ -224,7 +224,7 @@
 				color: 0.66, 0.69, 0.74, 1
 			Label:
 				id: storage_space_free_label
-				text: driveshare.free_amount
+				text: main_menu.free_amount
 				font_size: '16sp'
 				font_name: './fonts/Montserrat-Bold.ttf'
 				color: 0.26, 0.29, 0.33, 1
@@ -244,7 +244,7 @@
 				color: 0.66, 0.69, 0.74, 1
 			Label:
 				id: storage_space_used_label
-				text: driveshare.used_amount
+				text: main_menu.used_amount
 				font_size: '16sp'
 				font_name: './fonts/Montserrat-Bold.ttf'
 				color: 0.26, 0.29, 0.33, 1
@@ -264,7 +264,7 @@
 				color: 0.66, 0.69, 0.74, 1
 			Label:
 				id: storage_space_total_label
-				text: driveshare.total_amount
+				text: main_menu.total_amount
 				font_size: '16sp'
 				font_name: './fonts/Montserrat-Bold.ttf'
 				color: 0.26, 0.29, 0.33, 1
@@ -290,17 +290,17 @@
 			font_size: '16sp'
 			size_hint: 0.5, None
 			background_color: (0.30, 0.75, 0.91, 1)
-			on_release: driveshare.go_settings()
+			on_release: main_menu.go_settings()
 		ActionButton:
 			id: go_btn
 			pos_hint: {'center_y': 0.5}
-			text: driveshare.go_text
+			text: main_menu.go_text
 			actual_state: 'normal'
 			size: 100, 40
 			font_size: '16sp'
 			size_hint: 0.5, None
-			background_color: driveshare.GREEN
-			on_release: driveshare.go_toggle(go_btn)
+			background_color: main_menu.GREEN
+			on_release: main_menu.go_toggle(go_btn)
 
 <SettingsMenu>:
 	id: settings_menu
@@ -479,7 +479,7 @@
 				on_release: settings_menu.save_settings(settings_menu)
 
 <MainScreen>:
-	Main:
+	MainMenu:
 
 <SettingsScreen>:
 	SettingsMenu:
