--- a/driveshare.kv
+++ b/driveshare.kv
@@ -66,7 +66,6 @@
 	orientation: 'vertical'
 	pos_hint: {'top': 1.0}
 	spacing: 1
-	padding: 1, 0
 	canvas.before:
 		Color:
 			rgba: app.LIGHT_GREY
@@ -88,7 +87,7 @@
 				rgba: app.BLUE
 			Rectangle:
 				pos: 0, main_menu.height - 5
-				size: self.width+2, 5
+				size: self.width, 5
 		Label:
 			id: application_title_label
 			pos_hint: {'top': 1}
